--- a/frontend/translations/pt-PT.json
+++ b/frontend/translations/pt-PT.json
@@ -17,6 +17,9 @@
 			"back": {
 				"label": "Voltar"
 			}
+		},
+		"NoDataLabel": {
+			"default": "Sem dados disponíveis"
 		}
 	},
 	"planner": {
@@ -35,6 +38,30 @@
 		"FaqList": {
 			"label": "Tópico"
 		}
+	},
+	"lines":{
+		"Page":{
+			"heading": "Pesquisar Linhas"
+		},
+		"PageToolbar": {
+			"by_current_view": {
+				"all": "Todas as Linhas",
+				"favorites": "Favoritas"
+			},
+			"by_search": {
+				"placeholder": "Pesquisar por nome, número..."
+			},
+			"found_items_counter": "{count, plural, =0 {Nenhuma linha encontrada.} one {Encontrada # linha:} other {Encontradas # linhas:}}"
+		},
+		"FavoritesList":{
+			"no_favorites": "Ainda não tem linhas favoritas"
+		},
+		"all_lines": "Todas as Linhas",
+		"favorites": "Favoritas",
+		"expand_filters": "Expandir Filtros",
+		"collapse_filters": "Esconder Filtros",
+		"search_by": "Pesquisar por nome, número...",
+		"found_x_lines": "Encontradas {count} linhas"
 	},
 	"alerts": {
 		"Page":{
@@ -447,15 +474,6 @@
   },
   "common":{
     "back": "Voltar"
-  },
-  "lines":{
-    "all_lines": "Todas as Linhas",
-    "favorites": "Favoritas",
-    "expand_filters": "Expandir Filtros",
-    "collapse_filters": "Esconder Filtros",
-    "search_by": "Pesquisar por nome, número...",
-    "found_x_lines": "Encontradas {count} linhas",
-    "no_favorites": "Não tem linhas favoritas"
   },
   "line":{
     "today": "Hoje",
