Add contacts page

--- a/frontend/translations/pt-PT.json
+++ b/frontend/translations/pt-PT.json
@@ -504,6 +504,18 @@
 		"hours": "Horas",
 		"minutes": "Minutos",
 		"no_data": "Sem horários disponíveis"
+	},
+	"contacts":{
+		"heading": "Contactos",
+		"phone_line": "Linha informativa",
+		"phone_line_description": "Esta linha funciona todos os dias das 08:00 às 20:00 e é onde poderá tirar todas as suas dúvidas sobre a operação da Carris Metropolitana. Pergunte sobre linhas, percursos e horários, tarifas, ou efetue a sua reclamação.",
+		"operators": "Operadores cmetropolitana",
+		"operators_description": "Nesta linha pode contactar diretamente as empresas responsáveis pela operação de autocarros da Carris Metropolitana.",
+		"by_whatsapp": "Falar por WhatsApp",
+		"by_instagram": "Falar pelo Instagram",
+		"by_form": "Formulário de Contacto",
+		"lost_found": "Perdidos e Achados"
 	}
+
 
 }
