--- a/frontend/translations/pt-PT.json
+++ b/frontend/translations/pt-PT.json
@@ -8,6 +8,12 @@
 			"refuse": "Não, obrigado"
 		}
 	},
+	"common":{
+		"SelectOperationalDay": {
+			"today": "Hoje",
+			"tomorrow": "Amanhã"
+		}
+	},
 	"AppError": {
 		"title": "Ocorreu um erro inesperado",
 		"subtitle": "Fomos notificados e iremos corrigir em breve. Obrigado pela sua compreensão.",
@@ -45,6 +51,10 @@
 		"Single":{
 			"heading": "Pesquisar Linhas"
 		},
+		"SelectActivePatternGroup":{
+			"explainer": "O que é o percurso/destino de uma linha?",
+			"placeholder": "Selecionar percurso/destino..."
+		},
 		"Page":{
 			"heading": "Pesquisar Linhas"
 		},
@@ -64,12 +74,11 @@
 		"FavoritesList":{
 			"no_favorites": "Ainda não tem linhas favoritas"
 		},
-		"all_lines": "Todas as Linhas",
-		"favorites": "Favoritas",
+		"AlertsCarousel": {
+			"heading": "Alertas de Serviço"
+		},
 		"expand_filters": "Expandir Filtros",
-		"collapse_filters": "Esconder Filtros",
-		"search_by": "Pesquisar por nome, número...",
-		"found_x_lines": "Encontradas {count} linhas"
+		"collapse_filters": "Esconder Filtros"
 	},
 	"alerts": {
 		"Page":{
@@ -482,12 +491,7 @@
       }
     }
   },
-  "common":{
-    "back": "Voltar"
-  },
   "line":{
-    "today": "Hoje",
-    "tomorrow": "Amanhã",
     "pick_route": "Escolha um percurso/destino...",
     "service_alerts": "Alertas de Serviço",
     "x_vehicles_active": "{count, plural, =0 {Sem veículos a circular} one { veículo em circulação} other { veículos em circulação}}",
