--- a/frontend/translations/pt-PT.json
+++ b/frontend/translations/pt-PT.json
@@ -543,5 +543,34 @@
 				"document_request": "Pedido de Documento"
 			}
 		}
+	},
+	"stops":{
+		"Single":{
+			"heading": "Pesquisar Paragens"
+		},
+		"Page":{
+			"heading": "Pesquisar Paragens"
+		},
+		"PageToolbar": {
+			"by_current_view": {
+				"all": "Todas as Paragens",
+				"favorites": "Favoritas"
+			},
+			"by_search": {
+				"placeholder": "Pesquisar por nome, localidade..."
+			},
+			"found_items_counter": {
+				"all": "{count, plural, =0 {Nenhuma paragem encontrada.} one {Encontrada # paragem:} other {Encontradas # paragens:}}",
+				"favorites": "{count, plural, =0 {Nenhuma paragem favorita encontrada.} one {Encontrada # paragem favorita:} other {Encontradas # paragens favoritas:}}"
+			}
+		},
+		"FavoritesList":{
+			"no_favorites": "Ainda não tem paragens favoritas"
+		},
+		"AlertsCarousel": {
+			"heading": "Alertas de Serviço"
+		},
+		"expand_filters": "Expandir Filtros",
+		"collapse_filters": "Esconder Filtros"
 	}
 }
