--- a/frontend/translations/pt-PT.json
+++ b/frontend/translations/pt-PT.json
@@ -47,7 +47,7 @@
 			"label": "Tópico"
 		}
 	},
-	"lines":{
+	"lines": {
 		"Single":{
 			"heading": "Pesquisar Linhas"
 		},
@@ -73,6 +73,12 @@
 		},
 		"FavoritesList":{
 			"no_favorites": "Ainda não tem linhas favoritas"
+		},
+		"AlertsCarousel": {
+			"heading": "Alertas de Serviço"
+		},
+		"LineMap": {
+			"active_vehicles_counter": "{count, plural, =0 {Nenhum veículo em circulação} one {# veículo em circulação} other {# veículos em circulação}}"
 		},
 		"expand_filters": "Expandir Filtros",
 		"collapse_filters": "Esconder Filtros"
@@ -491,7 +497,6 @@
   "line":{
     "pick_route": "Escolha um percurso/destino...",
     "service_alerts": "Alertas de Serviço",
-    "x_vehicles_active": "{count, plural, =0 {Sem veículos a circular} one { veículo em circulação} other { veículos em circulação}}",
     "from_until": "Entre {start} e {end}",
     "route_explainer": "O que é o percurso/destino de uma linha?",
     "next_buses": "Próximas circulações",
