--- a/frontend/translations/pt-PT.json
+++ b/frontend/translations/pt-PT.json
@@ -80,6 +80,12 @@
 		"LineMap": {
 			"active_vehicles_counter": "{count, plural, =0 {Nenhum veículo em circulação} one {# veículo em circulação} other {# veículos em circulação}}"
 		},
+		"Metrics": {
+			"demand": {
+				"big_number": "{value, number}",
+				"subtitle": "Total de passageiros transportados"
+			}
+		},
 		"expand_filters": "Expandir Filtros",
 		"collapse_filters": "Esconder Filtros"
 	},
