--- a/frontend/translations/pt-PT.json
+++ b/frontend/translations/pt-PT.json
@@ -520,9 +520,10 @@
 
   },
 	"schedule":{
-		"hours": "Horas",
-		"minutes": "Minutos",
-		"no_data": "Sem horários disponíveis"
+		"hours": "Hora",
+		"minutes": "Min.",
+		"no_data": "Sem horários disponíveis",
+		"path": "Percurso"
 	},
 	"contacts":{
 		"heading": "Contactos",
