--- a/frontend/translations/pt-PT.json
+++ b/frontend/translations/pt-PT.json
@@ -14,7 +14,7 @@
 			"tomorrow": "Amanhã"
 		},
 		"button": {
-			"save": "Salvar",
+			"save": "Guardar",
 			"cancel": "Cancelar",
 			"delete": "Excluir",
 			"add": "Adicionar",
