refactor: Update footer navigation links to use settings file

--- a/frontend/translations/pt-PT.json
+++ b/frontend/translations/pt-PT.json
@@ -283,8 +283,8 @@
 		"schools": "Escolas & Universidades",
 		"flyers": "O Meu Livro de Horários",
 		"tarifs": "Tarifas",
-		"tickets": "Bilhetes de Bordo",
-		"navegante": "Passe navegante®",
+		"tickets": "Bilhetes Ocasionais",
+		"cards": "Cartão navegante®",
 		"stores": "Lojas e Rede de Agentes",
 		"help": "Apoio ao Cliente",
 		"faq": "Perguntas Frequentes",
