--- a/frontend/translations/pt-PT.json
+++ b/frontend/translations/pt-PT.json
@@ -285,6 +285,7 @@
 		"tarifs": "Tarifas",
 		"tickets": "Bilhetes Ocasionais",
 		"cards": "Cartão navegante®",
+		"purchase": "Onde comprar",
 		"stores": "Lojas e Rede de Agentes",
 		"help": "Apoio ao Cliente",
 		"faq": "Perguntas Frequentes",
