--- a/nextjs/translations/pt.json
+++ b/nextjs/translations/pt.json
@@ -732,7 +732,7 @@
     "operational_status": {
       "ACTIVE": "Paragem Ativa",
       "PROVISIONAL": "Paragem Provisória",
-      "SEASONAL": "Paragem Sasonal",
+      "SEASONAL": "Paragem Sazonal",
       "INACTIVE": "Paragem Inativa",
       "VOIDED": "Voided"
     }
