--- a/frontend/translations/pt-PT.json
+++ b/frontend/translations/pt-PT.json
@@ -278,7 +278,7 @@
 		}
 	},
 	"HeaderNavigationAccount": {
-		"configs": "Personalizar Experiência",
+		"notifications": "Notificações Inteligentes",
 		"favorites": "Favoritos",
 		"profile": "Perfil"
 	},
