--- a/frontend/translations/pt-PT.json
+++ b/frontend/translations/pt-PT.json
@@ -13,6 +13,14 @@
 			"today": "Hoje",
 			"tomorrow": "Amanhã"
 		},
+		"TimetableSchedules": {
+			"hours": "Hora",
+			"minutes": "Min."
+		},
+		"TimetableExceptionsLink": {
+			"variant": "<exceptionId>{exception_id})</exceptionId> Percurso <routeLongName>{route_long_name}</routeLongName> com destino a <patternHeadsign>{pattern_headsign}</patternHeadsign>",
+			"schedule": "Min."
+		},
 		"button": {
 			"save": "Guardar",
 			"cancel": "Cancelar",
@@ -117,6 +125,12 @@
 		},
 		"AlertsCarousel": {
 			"heading": "Alertas de Serviço"
+		},
+		"PathStopNextArrivals": {
+			"title": "Próximas circulações"
+		},
+		"PathStopTimetable": {
+			"title": "Horários planeados nesta paragem"
 		},
 		"expand_filters": "Expandir Filtros",
 		"collapse_filters": "Esconder Filtros"
