Cleanup and components change

--- a/frontend/translations/pt-PT.json
+++ b/frontend/translations/pt-PT.json
@@ -296,24 +296,64 @@
 		"favorites": "Favoritos",
 		"profile": "Perfil"
 	},
-	"HeaderNavigationMainMenu": {
-		"schedules": "Horários",
-		"lines": "Pesquisar Linhas",
-		"stops": "Pesquisar Paragens",
-		"alerts": "Alertas de Serviço",
-		"planner": "Planear Viagem",
-		"schools": "Escolas & Universidades",
-		"flyers": "O Meu Livro de Horários",
-		"tarifs": "Tarifas",
-		"tickets": "Bilhetes Ocasionais",
-		"cards": "Passe Mensal",
-		"helpdesks": "Onde comprar",
-		"stores": "Lojas e Rede de Agentes",
-		"help": "Apoio ao Cliente",
-		"faq": "Perguntas Frequentes",
-		"lost-and-found": "Perdidos e Achados",
-		"complaints": "Sugestões e Reclamações",
-		"contacts": "Contactos"
+	"settings": {
+		"navigation": {
+			"main": {
+				"schedules": {
+					"label": "Horários",
+					"links": {
+						"lines": "Pesquisar Linhas",
+						"stops": "Pesquisar Paragens",
+						"alerts": "Alertas de Serviço",
+						"planner": "Planear Viagem",
+						"schools": "Escolas & Universidades"
+					}
+				},
+				"tarifs": {
+					"label": "Tarifas",
+					"links": {
+						"tickets": "Bilhetes Ocasionais",
+						"cards": "Passe Mensal",
+						"helpdesks": "Onde comprar"
+					}
+				},
+				"support": {
+					"label": "Apoio ao Cliente",
+					"links": {
+						"stores": "Lojas e Rede de Agentes",
+						"faq": "Perguntas Frequentes",
+						"lost-and-found": "Perdidos e Achados",
+						"contacts": "Contactos"
+					}
+				}
+			},
+			"account": {
+				"primary": {
+					"links": {
+						"configs": "Configurações",
+						"favorites": "Favoritos",
+						"profile": "Ver perfil"
+					}
+				}
+			},
+			"footer": {
+				"primary": {
+					"links": {
+						"about": "Sobre a Carris Metropolitana",
+						"open-data": "Dados Abertos",
+						"status": "Estado"
+					}
+				},
+				"secondary": {
+					"links": {
+						"conditions": "Condições Gerais de Transporte",
+						"privacy": "Política de Privacidade",
+						"cookies": "Política de Cookies",
+						"legal": "Aviso Legal"
+					}
+				}
+			}
+		}
 	},
 	"HeaderLocaleSwitcher": {
 		"pt": {
@@ -335,17 +375,6 @@
 			"disabled": "Ligar Debug"
 		},
 		"Footer": {
-			"primary_links": {
-				"about": "Sobre a Carris Metropolitana",
-				"open-data": "Dados Abertos",
-				"status": "Estado"
-			},
-			"secondary_links": {
-				"conditions": "Condições Gerais de Transporte",
-				"privacy": "Política de Privacidade",
-				"cookies": "Política de Cookies",
-				"legal": "Aviso Legal"
-			},
 			"copyright": "© Carris Metropolitana {year} - Todos os direitos reservados"
 		}
 	},
@@ -353,6 +382,15 @@
 		"QuickSearchFavoritesBar": {
 			"empty": "Ainda não tem linhas favoritas...",
 			"more": "{count, plural, one {+ # linha} other {+ # linhas}}"
+		},
+		"SupportSection": {
+			"section_heading":"Apoio ao Cliente",
+			"nav_items": {
+				"faq": "Perguntas Frequentes",
+				"lost-and-found": "Perdidos e Achados",
+				"stores": "Lojas e Rede de Agentes",
+				"contacts":"Contactos"
+			}
 		}
 	},
 	"HomeQuickSearchWidget": {
@@ -383,16 +421,6 @@
 			"stops": "Pesquisar Paragens",
 			"planner": "Planear Viagem",
 			"alerts": "Alertas de Serviço"
-		}
-	},
-	"HomeSupportSection": {
-		"section_heading":"Apoio ao Cliente",
-		"nav_items": {
-			"faq": "Perguntas Frequentes",
-			"lost-and-found": "Perdidos e Achados",
-			"complaints": "Sugestões e Reclamações",
-			"stores": "Lojas e Rede de Agentes",
-			"contacts":"Contactos"
 		}
 	},
 	"lost-and-found": {
@@ -577,30 +605,9 @@
 			"by_instagram": "Falar pelo Instagram",
 			"by_form": "Formulário de Contacto",
 			"lost_found": "Perdidos e Achados",
-			"form": "Formulário de Contacto"
-		}
-	},
-	"complaints":{
-		"heading": "Sugestões e Reclamações",
-		"subheading": "A Carris Metropolitana está empenhada em prestar um serviço de qualidade e a sua opinião é fundamental para a melhoria contínua dos nossos serviços. Se tem alguma sugestão ou reclamação, por favor preencha o formulário abaixo.",
-		"form": {
-			"fields": {
-				"name": "Nome",
-				"surname": "Apelido",
-				"email": "Email",
-				"naveganteNumber": "Número de Cartão Navegante",
-				"municipality": "Município",
-				"subject": "Assunto",
-				"upload": "Anexar Ficheiro",
-				"message": "Mensagem"
-			},
-			"types": {
-				"transport_title": "Título de Transporte",
-				"where": "Local de Atendimento",
-				"service":"Serviço de Transporte",
-				"stop_location": "Local de Paragem",
-				"lost_found": "Perdidos e Achados",
-				"document_request": "Pedido de Documento"
+			"form": {
+				"heading": "Formulário de Contacto",
+				"subheading": "A Carris Metropolitana está empenhada em prestar um serviço de qualidade e a sua opinião é fundamental para a melhoria contínua dos nossos serviços. Se tem alguma sugestão ou reclamação, por favor preencha o formulário abaixo."
 			}
 		}
 	},
