Enhance MetricsSectionDemandByLine: add line selection and display selected metrics with sparkline

--- a/frontend/i18n/pt-PT.json
+++ b/frontend/i18n/pt-PT.json
@@ -320,7 +320,8 @@
 			"link": "Explorar Dados Abertos"
 		},
 		"by_line": {
-			"top": "linhas com mais passageiros transportados"
+			"top": "linhas com mais passageiros transportados hoje",
+			"selected": "passageiros transportados nesta linha"
 		}
 	},
 	"HeaderLogo": {
