Feature: add metrics by operator

--- a/frontend/i18n/pt-PT.json
+++ b/frontend/i18n/pt-PT.json
@@ -358,6 +358,10 @@
 		"by_line": {
 			"top": "linhas com mais passageiros transportados hoje",
 			"selected": "passageiros transportados nesta linha"
+		},
+		"area": {
+			"label": "Nº de validações na Área {area} hoje",
+			"value": "{value, number}"
 		}
 	},
 	"HeaderLogo": {
