Refactor SelectPattern component and add translation support
- Added Flex component from Mantine library for improved layout flexibility
- Imported DateTime and useTranslations from luxon and next-intl respectively
- Updated renderSelectOption function to display the start date of each pattern
- Updated renderPatternOption function to display the route long name instead of the stop names
- Updated SelectPatternProps interface to include date_filter prop

Fix SelectActivePatternGroup component to use SelectPattern component

- Imported SelectPattern component from common folder
- Removed unused imports from Mantine library
- Updated validPatternGroupsSelectOptions to pass patterns prop to SelectPattern component
- Updated SelectPattern component usage in return statement

Update Portuguese translation for SelectPattern component

- Added translation for start_date key in pt-PT.json file
- Added start_date translation to display the start date of each pattern
- No newline at end of file warning fixed

Update PatternGroup interface in lines.types.ts

- Added route_long_name and route_short_name properties to PatternGroup interface

--- a/frontend/i18n/pt-PT.json
+++ b/frontend/i18n/pt-PT.json
@@ -791,5 +791,8 @@
 		"update_profile_error": "Erro ao atualizar o perfil.",
 		"update_profile_pending": "A Atualizar o perfil...",
 		"toggle_stop_error": "Erro ao adicionar o paragem aos favoritos. {error}"
+	},
+	"SelectPattern": {
+		"start_date" : "A Partir de {day} de {month} de {year}"
 	}
 }
