Refactor PathStopTimetable component to handle unavailable schedules and display next available date

--- a/frontend/i18n/pt-PT.json
+++ b/frontend/i18n/pt-PT.json
@@ -193,7 +193,8 @@
 		},
 		"PathStopTimetable": {
 			"title": "Horários planeados nesta paragem:",
-			"no_data": "Horários indisponíveis para esta data."
+			"no_data": "Horários indisponíveis para esta data.",
+			"next_date": "Próximos horários disponíveis a partir de {value, date, dayShort} {value, date, monthLong} {value, date, yearLong}"
 		},
 		"expand_filters": "Expandir Filtros",
 		"collapse_filters": "Esconder Filtros"
